# chaos-sort

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
chaos_sort/: __init__.py
chaos_sort/core/: visualizer.py
chaos_sort/esoteric/: __init__.py  bogo_sort.py  bogobogo_sort.py  gnome_sort.py  miracle_sort.py  pancake_sort.py  quantum_bogo_sort.py  sleep_sort.py  slow_sort.py  spaghetti_sort.py  stalin_sort.py  stooge_sort.py
chaos_sort/satire/: __init__.py  bureaucracy_sort.py  gaslight_sort.py  genz_sort.py  intimidation_sort.py  lottery_sort.py  philosophical_sort.py  politician_sort.py  procrastination_sort.py  stackoverflow_sort.py  thanos_sort.py  trust_fund_sort.py
chaos_sort/standards/: __init__.py  bubble_sort.py  cocktail_sort.py  counting_sort.py  heap_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  radix_sort.py  selection_sort.py  shell_sort.py
examples/: demo.py
tests/: base_test.py  test_esoteric.py  test_satire.py  test_standards.py
