[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaos-sort-yash-test-unique"
version = "0.1.0"
description = "A unified, visualizable framework for 30+ sorting algorithms - from the efficient to the absurd"
authors = [
    {name = "The Chaos Collective", email = "chaos@sorting.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["sorting", "algorithms", "visualization", "education", "satire"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
]

dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.0.250",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/chaos-collective/chaos-sort"
Documentation = "https://chaos-sort.readthedocs.io"
Repository = "https://github.com/chaos-collective/chaos-sort"
"Bug Tracker" = "https://github.com/chaos-collective/chaos-sort/issues"

[tool.hatch.build.targets.wheel]
packages = ["chaos_sort"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]